tests/validprograms/project/test_pass_by_value.tds
Program {
	void f(Int x) {
		x = 1;
	}

	void print(Int x) extern;

	void main() {
		Int x = 0;
		f(x);
		print(x);
	}
}

