tests/invalidprograms/context/undeclared_function.tds
Program {
	Int f() {
		return 1 + g(0);
	}

	Int g(Int x) {
		return x;
	}

	Int main() {
		return 0;
	}
}

